force-app/main/default/objects/AdminTrackSettings__c/AdminTrackSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Admin Track Settings</label>
    <description>Configuration settings for AdminTrack — controls scheduling, Slack integration, and feature toggles</description>
</CustomObject>