force-app/main/default/objects/AdminTrackSettings__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <label>Is Active</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Master enable/disable for AdminTrack polling</description>
</CustomField>