force-app/main/default/objects/AdminTrackSettings__c/fields/LastPullTimestamp__c.field-meta.xml
<CustomField>
    <fullName>LastPullTimestamp__c</fullName>
    <label>Last Pull Timestamp</label>
    <type>DateTime</type>
    <description>Updated after each successful SetupAuditTrail pull. Used to filter only new records on subsequent runs</description>
</CustomField>