force-app/main/default/objects/AdminTrackSettings__c/fields/PullIntervalMinutes__c.field-meta.xml
<CustomField>
    <fullName>PullIntervalMinutes__c</fullName>
    <label>Pull Interval (Minutes)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <description>How often (in minutes) to poll SetupAuditTrail. Allowed values: 5, 15, 30, 60</description>
</CustomField>