force-app/main/default/objects/AdminTrackSettings__c/fields/SlackEnabled__c.field-meta.xml
<CustomField>
    <fullName>SlackEnabled__c</fullName>
    <label>Slack Enabled</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Toggle Slack notifications independently of the main active flag</description>
</CustomField>