force-app/main/default/objects/AdminTrackSettings__c/fields/SlackMessageTemplate__c.field-meta.xml
<CustomField>
    <fullName>SlackMessageTemplate__c</fullName>
    <label>Slack Message Template</label>
    <type>TextArea</type>
    <description>Customizable Slack message format. Supports {count}, {orgName}, {timestamp} tokens</description>
</CustomField>