force-app/main/default/objects/AdminTrackSettings__c/fields/SlackWebhookUrl__c.field-meta.xml
<CustomField>
    <fullName>SlackWebhookUrl__c</fullName>
    <label>Slack Webhook URL</label>
    <type>Url</type>
    <description>Slack Incoming Webhook URL. Must start with https://hooks.slack.com/</description>
</CustomField>